--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pg": "^8.14.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "serverless-http": "^3.2.0",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
