--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "pg": "^8.14.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "serverless-express": "^2.0.12",
     "serverless-http": "^3.2.0",
     "uuidv4": "^6.2.13"
   },
